Fix: Overflow WorkflowField on last line of tables (#329)

--- a/assets/sb-admin/css/components/_tables.scss
+++ b/assets/sb-admin/css/components/_tables.scss
@@ -1,5 +1,5 @@
 .table-responsive {
-    overflow-x: auto;
+    overflow-x: initial;
 
     th {
         vertical-align: middle;
